--- a/page-inserir-dados.html
+++ b/page-inserir-dados.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="assets/css-frd/style-responsive-mobile.css">
 <link rel="stylesheet" href="assets/css-frd/style-white-1.css">
 <link rel="stylesheet" href="assets/css/styles_frd.css">
-<!--<link rel="shortcut icon" href="images/_favicon.ico"/>-->
+<!--<link rel="shortcut icon" href="images/favicon.ico"/>-->
 <script src="assets/js-obs/jquery-3.2.1.min.js"></script>
 <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 <script>
