--- a/page-basica.html
+++ b/page-basica.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="assets/css-frd/style-responsive-mobile.css">
 <link rel="stylesheet" href="assets/css-frd/style-white-1.css">
 <link rel="stylesheet" href="assets/css/styles_frd.css">
-<link rel="shortcut icon" href="images/_favicon.ico"/>
+<link rel="shortcut icon" href="images/favicon.ico"/>
 
 <style>
 /*////////////CARREGANDO////////////*/
@@ -257,6 +257,17 @@ function get_url(){
 
 function avancar_page(){
 	window.open('page-dim-passo-3.html?tit_dim='+tit_dim,'_self');
+}
+
+toastr.options = {
+	"closeButton": true,
+  "debug": false,
+  "positionClass": "toast-top-full-width",
+  "onclick": null,
+  "fadeIn": 300,
+  "fadeOut": 1000,
+  "timeOut": 10000,
+  "extendedTimeOut": 1000
 }
 
 </script>
